postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: db
  labels:
    app: external-db
spec:
  selector:
    matchLabels:
      app: external-db
  replicas: 1
  template:
    metadata:
      labels:
        app: external-db
    spec:
      containers:
        - name: postgres
          image: postgres:13
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: external-db-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: db
  labels:
    app: external-db
spec:
  selector:
    app: external-db
  ports:
    - port: 5432
  type: ClusterIP
